third commit || Statistics server added || HTTP client is ready, Dto Module is ready, main Service is ready || stat-service controller, repository and service FIXES!